--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@img-proxy.com/easy-s3-plugin",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Tiny JS plugin to upload files to img-proxy.com.",
-  "main": "easy-s3.js",
+  "main": "dist/easy-s3.min.js",
   "scripts": {
     "build": "uglifyjs --compress --mangle --output ./dist/easy-s3.min.js easy-s3.js"
   },
