--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "@img-proxy.com/easy-s3-plugin",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "Tiny JS plugin to upload files to img-proxy.com.",
-  "main": "dist/easy-s3.min.js",
+  "main": "dist/index.min.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "/dist"
+  ],
   "scripts": {
-    "build": "uglifyjs --compress --mangle --output ./dist/easy-s3.min.js easy-s3.js"
+    "minify": "uglifyjs --compress --mangle --output dist/index.min.js -- dist/index.js",
+    "build": "tsc && npm run minify"
   },
   "repository": {
     "type": "git",
@@ -18,6 +23,7 @@
   "homepage": "https://github.com/img-proxy-com/easy-s3-plugin#readme",
   "devDependencies": {
     "prettier": "^2.5.1",
-    "uglify-js": "^3.14.5"
+    "typescript": "^4.5.5",
+    "uglify-js": "^3.15.0"
   }
 }
